samples/_failures_safe/1761467328_df05ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9647444.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
